--- a/Apllication/build.gradle
+++ b/Apllication/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.boot.server'
-version = '0.0.1-SNAPSHOT'
+version = 'Spring_Server_v.0.1.0'
 sourceCompatibility = '11'
 
 configurations {
@@ -24,6 +24,9 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+
 }
 
 tasks.named('test') {
